# deep-learning-containers

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitleaksignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .release_images_template.yml  .safety-policy.yml  .shellcheckrc  .yamllint  02-github-actions.md  404.html  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  RELEASE.md  _typos.toml  autopr-buildspec.yml  autopr_buildspec.yml  available_images.md  bjs_release_buildspec.yml  buildspec-ei.yml  buildspec.yml  canary_testspec.yml  cleanupspec.yml  config.json  custom_images.md  deep_canary_buildspec.yml  design.md  dlc_build_version_override_config.toml  dlc_developer_config.toml  eks_buildspec.yml  entry.sh  extended_release_buildspec.yml  generate_dlc_image_release_information.py  image_transfer_buildspec.yml  (+31 more)
.claude/: settings.json  settings.local.json
.gem-config/: config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  buildspec-cb-fleet.yml  dependabot.yml  release-schedule.yml  release_schedule.md
.release_templates/: mxnet_release_images.yml  pytorch_release_images.yml  stabilityai_release_images.yml  tensorflow1_release_images.yml  tensorflow2_release_images.yml
DEVELOPMENT/: index.html
Scheduler/: README.md
TestRequester/: buildspec.yml  setup.py  trigger.py
autogluon/: buildspec-0-2.yml  buildspec-0-3-1.yml  buildspec-0-3-2.yml  buildspec.yml  buildspec_0_3_1.yml
base/: buildspec-cu126.yml  buildspec-cu128-ubuntu22.yml  buildspec-cu128-ubuntu24.yml  buildspec-cu129-ubuntu22.yml  buildspec-cu130-ubuntu22.yml  buildspec-cu1302-ubuntu22.yml  buildspec.yml  index.html
data/: common-ecr-scan-allowlist.json  common-safety-ignorelist.json  ecr_scan_vulnerabilities.json  ignore_ids_safety_scan.json  test-exception-allowlist.json
dev-dsk-huahq-2b-b62201a6.us-west-2.amazon.com/: setup.py  trigger.py
docker/lambda/cupy/: pyproject.toml
docker/lambda/pytorch/: pyproject.toml
docker/pytorch/: Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.gpu  build.sh  push.sh  pyproject.toml  versions-cpu.env  versions-cuda.env  versions.env
docker/pytorch/2.11/: Dockerfile.cpu  Dockerfile.cuda
docker/pytorch/2.11/cpu/: pyproject.toml
docker/pytorch/2.11/cuda/: pyproject.toml
docker/pytorch/2.12/: Dockerfile.cpu  Dockerfile.cuda
docker/pytorch/2.12/cpu/: pyproject.toml
docker/pytorch/2.12/cuda/: pyproject.toml
docker/pytorch/2.13/cpu/: pyproject.toml
docker/pytorch/2.13/cuda/: pyproject.toml
docker/pytorch/cpu/: pyproject.toml
docker/pytorch/cuda/: pyproject.toml
docker/pytorch/inference/1.13.1/: Dockerfile.neuron  Dockerfile.neuronx  Dockerfile.neuronx.cve_allowlist.json
docker/pytorch/inference/2.1.1/: Dockerfile.neuronx  Dockerfile.neuronx.cve_allowlist.json
docker/pytorch/inference/2.1.2/: Dockerfile.neuronx
docker/pytorch/inference/common/: config.properties  neuron-entrypoint.py  torchserve-neuron.sh
docker/pytorch/training/1.13.1/: Dockerfile.neuronx  Dockerfile.neuronx.cve_allowlist.json
docker/pytorch/training/2.1.1/: Dockerfile.neuronx  Dockerfile.neuronx.cve_allowlist.json
docker/pytorch/training/2.1.2/: Dockerfile.neuronx  Dockerfile.neuronx.cve_allowlist.json
docker/pytorch/training/common/: changehostname.c  start_with_right_hostname.sh
docker/pytorch/wheels/: .gitignore
docker/ray-train/: Dockerfile.cuda  pyproject.toml
docker/ray-train/2.56/cuda/: pyproject.toml
docker/sklearn/1.9-0/: Dockerfile  pyproject.toml
docker/tensorflow/2.21/cpu/: pyproject.toml
docker/tensorflow/2.21/cuda/: pyproject.toml
docker/tensorflow/cuda/: pyproject.toml
docker/tensorflow/inference/2.20/cpu/: pyproject.toml
docker/tensorflow/inference/2.20/cuda/: pyproject.toml
docker/whisperx/: Dockerfile.amzn2023  NOTICE  pyproject.toml
docker/xgboost/: Dockerfile  pyproject.toml  requirements.txt
docker/xgboost/3.0-5/: Dockerfile  requirements.txt
docker/xgboost/resources/: dask_configs.yaml
docker/xgboost/resources/mlio_stub/: __init__.py
docker/xgboost/resources/mlio_stub/integ/: __init__.py
docker/xgboost/resources/mms/: config.properties.tmp
docker/xgboost/resources/patches/: decoder.py
docs/: .nav.yml  DEVELOPMENT.md  README.md  index.md  local_scanning.md  requirements.txt
ecr_scan/: miscellaneous.py  security.py  test_ecr_scan.py  test_utils.py
eks_infra/: add_iam_identity.sh  build.sh  build_param.json  build_param.template  cluster-autoscalar-autodiscover.yaml  cluster_config.yaml  create_cluster.sh  delete_cluster.sh  eks_buildspec.yml  env_setup.sh  install_cluster_components.sh  install_kubeflow_custom_kfctl.sh  namespace.yaml  nodegroup.yaml  pre_build.sh  rbac.yaml  upgrade_cluster.sh
eks_infrastructure/: add_iam_identity.sh  build.sh  build_param.json  build_param.template  cluster-autoscalar-autodiscover.yaml  create_cluster.sh  delete_cluster.sh  eks_buildspec.yml  eks_cron_job_buildspec.yml  env_setup.sh  helper.sh  host_patching_buildspec.yml  install_cluster_components.sh  lambda_function.py  namespace.yaml  new_operation.sh  patch_hosts.json  patch_hosts.sh  patch_hosts.template  rbac.yaml  upgrade_cluster.sh  upgrade_kubeflow.sh  upgrade_operation.sh
get_started/: index.html
hardened_base_dockerfiles/: Dockerfile.cuda-11.2.1-base.gpu  Dockerfile.cuda-11.2.2-base.gpu  Dockerfile.cuda-11.2.2-cudnn8-runtime.gpu  Dockerfile.cuda-11.3.1-base.gpu  Dockerfile.cuda-11.5.1-base.gpu  Dockerfile.cuda-11.6.2-base.gpu  Dockerfile.ubuntu20.04.cpu
miscellaneous_dockerfiles/: Dockerfile.apatch  Dockerfile.autopatch  Dockerfile.common
miscellaneous_scripts/: bash_telemetry.sh  build_requirements.txt  derive_history.py  dlc_template.py  dockerfile_patch_script.sh  extract_apt_patch_data.py  move_customize.py  requirements.txt  start_cuda_compat.py  start_cuda_compat.sh
mxnet/: buildspec-1-6.yml  buildspec-1-7.yml  buildspec-1-8.yml  buildspec-ei.yml  buildspec-eia-1-5.yml  buildspec-eia.yml  buildspec-inf.yml  (+5 more)
scripts/ray/: dockerd_entrypoint.sh  pyproject.toml  requirements.txt  sagemaker_entrypoint.sh  sagemaker_serve.py
(+5649 files in other folders)
