[project]
name = "pytorch-dlc"
version = "2.11.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "deepspeed==0.18.9",
    "boto3",
    "botocore",
    "pyyaml",
    "requests",
    "packaging",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
