[project]
name = "xgboost-sagemaker-dlc"
version = "3.0.5"
requires-python = ">=3.11,<3.12"
dependencies = [
    # XGBoost core (already in base, listed for completeness of the resolver)
    "xgboost==3.0.5",
    "numpy==2.1.0",
    "pyarrow==22.0.0",
    "pandas==2.2.3",

    # SageMaker serving stack
    "Flask==3.1.1",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "multi-model-server==1.1.2",
    "sagemaker-containers==2.8.6.post2",
    "sagemaker-inference==1.5.5",

    # AWS SDK
    "boto3==1.38.34",
    "botocore==1.38.34",

    # ML / data libraries
    "dask[dataframe]==2024.11.2",
    "dask-cuda==24.12.00",
    "cuda-python==12.6.0",
    "matplotlib==3.9.2",
    "numba==0.61.0",
    "Pillow==11.2.1",
    "scikit-learn==1.5.2",
    "scipy==1.15.0",

    # Utilities
    "cryptography==45.0.5",
    "gevent==24.11.1",
    "psutil==7.0.0",
    "pynvml==11.4.1",
    "python-dateutil==2.9.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "retrying==1.3.3",
    "urllib3==2.4.0",
    "certifi==2025.4.26",
    "wheel==0.45.1",
    "setuptools<81",

    # Patches
    "protobuf>=3.20.0,<=3.20.3",
    "fonttools>=4.60.2",

    # Debugger (installed separately — setup.py requires git-secrets)
    # "sagemaker-debugger @ git+https://github.com/awslabs/sagemaker-debugger.git@v1.0.32",
]

# Override transitive pins from sagemaker-containers incompatible with Python 3.11
[tool.uv]
override-dependencies = [
    "Flask==3.1.1",
    "Werkzeug==3.1.3",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "itsdangerous==2.2.0",
    "boto3==1.38.34",
    "botocore==1.38.34",
    "urllib3==2.4.0",
]
