[project]
name = "xgboost-dlc"
version = "3.2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "xgboost==3.2.0",
    "boto3==1.38.0",
    "botocore==1.38.0",
    "certifi==2025.4.26",
    "cryptography==49.0.0",
    "cuda-python==12.9.0",
    "dask-cuda==26.4.0",
    "dask[dataframe]==2026.1.1",
    "Flask==3.1.3",
    "gevent==26.4.0",
    "gunicorn==25.3.0",
    "matplotlib==3.10.9",
    "multi-model-server==1.1.2",
    "numba==0.65.1",
    "numpy==2.1.0",
    "pandas==2.2.3",
    "Pillow==12.2.0",
    "psutil==7.0.0",
    "pynvml==12.0.0",
    "python-dateutil==2.9.0",
    "PyYAML==6.0.1",
    "requests==2.34.2",
    "retrying==1.3.3",
    "sagemaker-containers==2.8.6.post2",
    "sagemaker-inference==1.5.5",
    "scikit-learn==1.9.0",
    "scipy==1.15.0",
    "setuptools>=80.9.0,<81",
    "urllib3==2.7.0",
    "Werkzeug==3.1.8",
    "pyarrow==23.0.1",
    "protobuf<=5.29.6,>=5.29.6",
    "fonttools>=4.60.2",
    "idna>=3.15",
    "tornado>=6.5.6",
    "msgpack>=1.2.1",
]

[tool.uv]
override-dependencies = [
    "flask==3.1.3",
    "jinja2>=3.1.6",
    "markupsafe>=2.1.5",
    "itsdangerous>=2.2.0",
    "werkzeug==3.1.6",
    "urllib3==2.7.0",
    "certifi==2025.4.26",
    "pillow==12.2.0",
]
