[project]
name = "dlc-ray"
version = "1.0.0"
requires-python = "==3.13.*"
dependencies = [
    "awscli==1.44.75",
    "pip==26.0.1",
    "boto3==1.42.85",
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "numpy==2.4.4",
    "opencv-python==4.13.0.92",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "pyyaml==6.0.3",
    "ray[serve]==2.54.1",
    "scikit-learn==1.8.0",
    "soundfile==0.13.1",
    "torch==2.10.0",
    "torchaudio==2.11.0",
    "torchcodec==0.11.0",
    "torchvision==0.25.0",
    "transformers==5.5.0",
    "uvicorn[standard]==0.44.0",
]
