[project]
name = "lambda-cupy"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "awslambdaric==4.0.0",
    "boto3==1.40.4",
    "cupy-cuda12x==14.0.1",
    "cvxpy==1.8.1",
    "numba==0.64.0",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "pip==26.0.1",
    "pip-licenses==5.5.1",
    "requests==2.33.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "urllib3==2.6.3",
    "pytest==8.4.1",
]
