[project]
name = "lambda-cupy"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "awslambdaric==4.0.0",
    "boto3==1.42.85",
    "cupy-cuda12x==14.0.1",
    "cvxpy==1.8.2",
    "numba==0.65.0",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "pip==26.0.1",
    "pip-licenses==5.5.5",
    "requests==2.33.1",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "urllib3==2.6.3",
    "pytest==9.0.3",
]
