[project]
name = "lambda-pytorch"
version = "1.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate==1.13.0",
    "av==17.0.0",
    "awslambdaric==4.0.0",
    "boto3==1.42.85",
    "diffusers==0.37.1",
    "librosa==0.11.0",
    "numpy==2.4.4",
    "opencv-python-headless==4.13.0.92",
    "pillow==12.2.0",
    "pip==26.0.1",
    "pip-licenses==5.5.5",
    "requests==2.33.1",
    "safetensors==0.7.0",
    "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git@2b90b9f5ceec907a1c18123530e92e794ad901a4",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "soundfile==0.13.1",
    "torch==2.10.0",
    "torchaudio==2.11.0",
    "torchvision==0.25.0",
    "transformers==5.5.0",
    "urllib3==2.6.3",
    "pytest==9.0.3",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]
