[project]
name = "sklearn-dlc"
version = "1.9.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "scikit-learn==1.9.0",
    "numpy==2.5.1",
    "scipy==1.18.0",
    "pandas==2.2.3",
    "pyarrow==25.0.0",
    "boto3==1.43.46",
    "Flask==3.1.3",
    "gunicorn==26.0.0",
    "multi-model-server==1.1.2",
    "sagemaker-containers==2.8.6.post2",
    "sagemaker-inference==1.5.5",
    "sagemaker-training==4.8.0",
    "PyYAML==6.0.3",
    "requests==2.33.0",
]

[tool.uv]
# Force modern versions of transitive HTTP deps that sagemaker-containers
# hard-pins to old, CVE-vulnerable versions.
override-dependencies = [
    "flask==3.1.3",
    "werkzeug==3.1.8",
]
