[project]
name = "tensorflow-dlc"
version = "2.21.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "tensorflow==2.21.0",
    # CUDA runtime libs (cuDNN + NCCL) — installed via pip because AL2023 core repo
    # and NVIDIA's amzn2023 CUDA repo don't ship libcudnn / libnccl RPMs.
    # cuDNN 9.5.1.17 patches CVE-2025-23339 (vs. TF 2.21's upstream-tested 9.3.0.75);
    # cuDNN 9.x ships forward-ABI-compatible SONAMEs so TF 2.21's 9.3-linked binary
    # loads against 9.5 without rebuild. NCCL_VERSION matches versions-cuda.env.
    # Dockerfile.cuda copies the .so files out of these packages into
    # /usr/local/cuda/lib64.
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-nccl-cu12==2.29.7",
    "mpi4py",
    "boto3",
    "botocore",
    # TF compat pins — declared here (not as inline `uv pip install` in the
    # Dockerfile) so OSS license scanning, uv.lock reproducibility, and resolver
    # conflict detection all work. See migration doc Locked Decisions.
    "cython<3",
    "numpy==1.26.4",
    "requests",
    "packaging",
    # carry-forward from TF 2.19 master "common" stage (Dockerfile.cpu/gpu)
    "pybind11",
    "scipy",
    "Pillow",
    "python-dateutil",
    "awscli<2",
    "h5py",
    "absl-py",
    "werkzeug",
    "urllib3",
    "protobuf",
]

[project.optional-dependencies]
sagemaker = [
    "sagemaker-tensorflow-training",
    "sagemaker-training",
    "smclarify",
    "sagemaker>=3.4.0",
    "mlflow>=3.9.0",
    # TF ecosystem extras + ad-hoc utilities — moved here from inline pip installs
    # in the sagemaker stage. Per migration doc Locked Decision, every package
    # shipped in the image must be enumerated in pyproject.toml. Verify on each
    # release that this list still matches the Dockerfile inline-install history.
    "tensorflow-io==0.37.*",
    "tensorflow-datasets",
    "opencv-python==4.11.0.86",
    "numba",
    "bokeh",
    "imageio",
    "plotly",
    "seaborn",
    "shap<0.50",
    "pandas",
    "scikit-learn",
    "cloudpickle",
    "sagemaker-experiments==0.1.45",
    "y-py",
    "sagemaker-studio-analytics-extension",
    "sparkmagic==0.22.0",
    "sagemaker-studio-sparkmagic-lib",
    "s3fs>=2026.2.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
