[project]
name = "pytorch-dlc-cpu"
version = "2.13.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.13.0",
    "torchvision==0.28.0",
    "torchaudio==2.11.0",
    "deepspeed==0.18.8",
    "fastai",
    "boto3",
    "botocore",
    "pyyaml",
    "requests",
    "packaging",
    "urllib3>=2.7.0",
    "python-multipart>=0.0.30",
    "starlette>=1.3.1",
    "GitPython>=3.1.50",
    "Mako>=1.3.12",
    "mpi4py",
    "scipy",
    "scikit-learn",
    "opencv-python",
    "msgpack>=1.2.1",  # CVE GHSA-6v7p-g79w-8964 (transitive via deepspeed)
]

[project.optional-dependencies]
sagemaker = [
    "smclarify",
    "sagemaker>=3.4.0",
    "sagemaker-pytorch-training",
    "sagemaker-training",
    "mlflow>=3.9.0",
    "bokeh",
    "imageio",
    "numba",
    "pandas",
    "plotly",
    "shap",
    "scikit-learn",
    "seaborn",
    "cloudpickle",
    "s3fs>=2026.2.0",
    "aiohttp>=3.14.0",
    "tornado>=6.5.6",  # CVE GHSA-3x9g-8vmp-wqvf, GHSA-mgf9-4vpg-hj56 (transitive)
    "cryptography>=48.0.1",  # CVE GHSA-537c-gmf6-5ccf (transitive)
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
