[project]
name = "tensorflow-dlc"
version = "2.21.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "tensorflow==2.21.0",
    # cuDNN + NCCL come from pip because AL2023 core and NVIDIA's amzn2023 CUDA
    # repo don't ship the RPMs. cuDNN 9.5.1.17 patches CVE-2025-23339; cuDNN 9.x
    # ships forward-ABI-compatible SONAMEs so TF 2.21's 9.3-linked binary loads
    # against 9.5 without rebuild. Dockerfile.cuda copies the .so files out into
    # /usr/local/cuda/lib64.
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-nccl-cu12==2.30.7",
    "mpi4py",
    "boto3",
    "botocore",
    # Security pin: aiohttp >=3.14.1 patches CVE-2026-34993 (CookieJar.load RCE),
    # CVE-2026-47265 (cookie leak on cross-origin redirect), and the 3.14.1 batch:
    # CVE-2026-54273 / 54274 / 54275 / 54278 / 54279 / 54280 (HIGH). Pulled
    # transitively; direct pin forces the patched line.
    "aiohttp>=3.14.1",
    # Security pins (direct pin forces the patched line for transitive deps):
    # PyJWT>=2.13.0    — CVE-2026-48526 (HIGH)
    # cryptography>=48.0.1 — GHSA-537c-gmf6-5ccf (HIGH)
    # starlette>=1.3.1 — GHSA-82w8-qh3p-5jfq + GHSA-wqp7-x3pw-xc5r (HIGH)
    # tornado>=6.5.6   — GHSA-3x9g-8vmp-wqvf + GHSA-mgf9-4vpg-hj56 (HIGH)
    # soupsieve>=2.8.4 — GHSA-2wc2-fm75-p42x + GHSA-836r-79rf-4m37 (HIGH,
    #                    DoS/ReDoS in CSS selector parser; transitive via bs4)
    "PyJWT>=2.13.0",
    "cryptography>=48.0.1",
    "starlette>=1.3.1",
    "tornado>=6.5.6",
    "soupsieve>=2.8.4",
    # TF compat pins
    "numpy>=2.1,<2.5",
    "requests",
    "packaging",
    "pybind11",
    "scipy",
    "Pillow",
    "python-dateutil",
    "awscli<2",
    "h5py",
    "absl-py",
    "werkzeug",
    "urllib3",
    "protobuf",
]

[project.optional-dependencies]
sagemaker = [
    "sagemaker-tensorflow-training",
    "sagemaker-training",
    "smclarify",
    "sagemaker>=3.15.0",
    "mlflow>=3.9.0",
    "tensorflow-io==0.37.*",
    "tensorflow-datasets",
    "opencv-python",
    "numba",
    "bokeh",
    "imageio",
    "plotly",
    "seaborn",
    "shap",
    "pandas",
    "scikit-learn",
    "cloudpickle",
    "sagemaker-experiments==0.1.45",
    "y-py",
    "sagemaker-studio-analytics-extension",
    "sparkmagic==0.22.0",
    "sagemaker-studio-sparkmagic-lib",
    "s3fs>=2026.2.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
