[project]
name = "tensorflow-serving-inference-dlc-cpu"
version = "2.20.0"
requires-python = ">=3.12,<3.13"
# ──────────────────────────────────────────────────────────────────────────────
# TF Serving 2.20 CPU AL2023 inference DLC — runtime-base dependencies
#
# The TF Serving binary itself is NOT installed via pip — it is COPYed out of
# tensorflow/serving:2.20.0-devel in the Dockerfile. The `tensorflow-serving-api`
# wheel is the matched gRPC stub (used by python_service.py to call the local
# serving binary on port 8500).
#
# IMPORTANT — locked decision Q1 (handoff):
#   `tensorflow-serving-api==2.20.0` is INTENTIONALLY OMITTED from this
#   `dependencies` list. The PyPI wheel declares a hard `tensorflow` runtime
#   dep (≈600 MB framework wheel) which we do not want in an inference image.
#   uv's resolver does not support per-package `--no-deps`, so the wheel is
#   instead installed inline in the Dockerfile via:
#       uv pip install --no-deps tensorflow-serving-api==2.20.0
#   The transitive runtime needs of tfs-api (numpy, protobuf, grpcio) are
#   declared explicitly below so a coherent venv is locked. OSS license
#   tracking still picks up tfs-api at compliance-scan time because the
#   wheel is physically present in the image.
#
# Source for this dep list: master TF 2.19 inference Dockerfile.cpu
# (RUN pip install blocks), translated to uv/pyproject form per training
# PR #6107 pattern.
# ──────────────────────────────────────────────────────────────────────────────
dependencies = [
    # ── tfs-api transitive runtime needs (explicit pins; see header note) ─────
    "numpy==1.26.4",
    "protobuf>=3.20,<7",
    "grpcio>=1.0",

    # ── AWS / network / common utilities (carried over from master 2.19) ─────
    "awscli<2",
    "boto3",
    "botocore",
    "requests",
    "packaging",
    "gevent",

    # ── Falcon-based SM handler stack ─────────────────────────────────────────
    # Both pins user-locked per handoff §16.
    "falcon==3.1.0",
    "gunicorn>=22.0.0",

    # ── Compat / security pins inherited from training PR #6107 ───────────────
    "cython<3",
    "aiohttp>=3.14.0",
    "urllib3",
]

[project.optional-dependencies]
sagemaker = [
    # See cuda/pyproject.toml for rationale on each entry; CPU mirrors CUDA
    # for SM-stage deps. `sagemaker-tensorflow-serving-container` is NOT on
    # PyPI; the `sagemaker` SDK is intentionally omitted to avoid pulling
    # torch + nvidia-* into an inference image. Handler scripts use boto3
    # directly (matches master TF 2.19 inference behavior).
    "pandas",
    "scikit-learn",
    "cloudpickle",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
